# pyvyxal

./: .gitmodules  LICENCE  README.md  main.py  patch.bash  pyproject.toml  requirements.txt
pyvyxal/: __init__.py
scripts/: build.bash  patch.bash
tests/: test.py
